Create the header in thhe form

--- a/index.html
+++ b/index.html
@@ -16,5 +16,19 @@
 			Photo by <a href="https://unsplash.com/@mister_guiz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Guillaume Briard</a> on <a href="https://unsplash.com/photos/closeup-photo-of-rocky-mountain-under-blue-and-white-sky-lSXpV8bDeMA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
 		</div>
 	</article>
+	<article class="form">
+		<header>
+			<p>
+				This is not a real online service! 
+				You know you need something like this in your life 
+				to help you realize your deepest dreams. Sign up <i>now</i> to get started.
+			</p>
+			<p>
+				You <i>know</i> you want to.
+			</p>
+		</header>
+		<section></section>
+		<footer></footer>
+	</article>
 </body>
 </html>
