Create form body

--- a/index.html
+++ b/index.html
@@ -27,7 +27,35 @@
 				You <i>know</i> you want to.
 			</p>
 		</header>
-		<section></section>
+		<section>
+			<h1>Let's do this!</h1>
+			<div class="fields">
+				<div class="field">
+					<label for="first_name">first name</label>
+					<input type="text" name="first_name" id="first_name">
+				</div>
+				<div class="field">
+					<label for="last_name">last name</label>
+					<input type="text" name="last_name" id="last_name">
+				</div>
+				<div class="field">
+					<label for="email">email</label>
+					<input type="text" name="email" id="email">
+				</div>
+				<div class="field">
+					<label for="phone">phone number</label>
+					<input type="tel" name="phone" id="phone">
+				</div>
+				<div class="field">
+					<label for="password">password</label>
+					<input type="password" name="password" id="password">
+				</div>
+				<div class="field">
+					<label for="confirm_password">confirm password</label>
+					<input type="password" name="confirm_password" id="confirm_password">
+				</div>
+			</div>
+		</section>
 		<footer></footer>
 	</article>
 </body>
