Create the form's footer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
 				</div>
 			</div>
 		</section>
-		<footer></footer>
+		<footer>
+			<button type="submit">Create Account</button>
+			<p>Already have an account? <a href="#">Log in</a></p>
+		</footer>
 	</article>
 </body>
 </html>
