Update links in photo credit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<span>odin</span>
 		</div>
 		<div class="photo_credit">
-			Photo by <a href="https://unsplash.com/@mister_guiz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Guillaume Briard</a> on <a href="https://unsplash.com/photos/closeup-photo-of-rocky-mountain-under-blue-and-white-sky-lSXpV8bDeMA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+			Photo by <a href="https://unsplash.com/@mister_guiz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Guillaume Briard</a> on <a href="https://unsplash.com/photos/closeup-photo-of-rocky-mountain-under-blue-and-white-sky-lSXpV8bDeMA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
 		</div>
 	</article>
 	<article class="form">
