--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<span>odin</span>
 		</div>
 		<div class="photo_credit">
-			Photo by <a href="https://unsplash.com/@mister_guiz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Guillaume Briard</a> on <a href="https://unsplash.com/photos/closeup-photo-of-rocky-mountain-under-blue-and-white-sky-lSXpV8bDeMA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+			Photo by <a href="https://unsplash.com/@mischievous_penguins?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Casey Horner</a> on <a href="https://unsplash.com/photos/gray-mountain-in-landscape-photography-G2jAOMGGlPE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
 		</div>
 	</article>
 	<article class="form">
