Remove width and height of logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<article class="left_side">
 		<div class="logo">
-			<img src="images/odin-lined.png" width="88" height="118" alt="logo">
+			<img src="images/odin-lined.png" alt="logo">
 			<span>odin</span>
 		</div>
 		<div class="photo_credit">
