Give error class to password fields

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 				<div class="row">
 					<div class="field">
 						<label for="password">password</label>
-						<input type="password" name="password" id="password" required>
+						<input type="password" name="password" id="password" class="error" required>
 					</div>
 					<div class="field">
 						<label for="confirm_password">confirm password</label>
-						<input type="password" name="confirm_password" id="confirm_password" required>
+						<input type="password" name="confirm_password" id="confirm_password" class="error" required>
 					</div>
 				</div>
 			</div>
