Add form attributes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			Photo by <a href="https://unsplash.com/@mischievous_penguins?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Casey Horner</a> on <a href="https://unsplash.com/photos/gray-mountain-in-landscape-photography-G2jAOMGGlPE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
 		</div>
 	</article>
-	<form>
+	<form action="" method="post">
 		<header>
 			<p>
 				This is not a real online service! 
