--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			Photo by <a href="https://unsplash.com/@mischievous_penguins?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Casey Horner</a> on <a href="https://unsplash.com/photos/gray-mountain-in-landscape-photography-G2jAOMGGlPE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
 		</div>
 	</article>
-	<form action="" method="post">
+	<form action="" method="get">
 		<header>
 			<p>
 				This is not a real online service! 
@@ -38,31 +38,32 @@
 				<div class="row">
 					<div class="field">
 						<label for="first_name">first name</label>
-						<input type="text" name="first_name" id="first_name" required>
+						<input type="text" name="first_name" id="first_name" required autocomplete="given-name">
 					</div>
 					<div class="field">
 						<label for="last_name">last name</label>
-						<input type="text" name="last_name" id="last_name" required>
+						<input type="text" name="last_name" id="last_name" required autocomplete="family-name">
 					</div>
 				</div>
 				<div class="row">
 					<div class="field">
 						<label for="email">email</label>
-						<input type="text" name="email" id="email" required>
+						<input type="text" name="email" id="email" required autocomplete="email">
 					</div>
 					<div class="field">
 						<label for="phone">phone number</label>
-						<input type="tel" name="phone" id="phone" required>
+						<input type="tel" name="phone" id="phone" required autocomplete="tel-national">
 					</div>
 				</div>
 				<div class="row">
 					<div class="field">
 						<label for="password">password</label>
-						<input type="password" name="password" id="password" required>
+						<input type="password" name="password" id="password" required onkeyup="validatePassword();">
+						<span class="error_message"></span>
 					</div>
 					<div class="field">
 						<label for="confirm_password">confirm password</label>
-						<input type="password" name="confirm_password" id="confirm_password" required>
+						<input type="password" name="confirm_password" id="confirm_password" required onkeyup="validatePassword();">
 					</div>
 				</div>
 			</div>
